[gd_scene load_steps=20 format=2]

[ext_resource path="res://Game/GL_Sting_Left_Player_Turn.wav" type="AudioStream" id=1]
[ext_resource path="res://Board/Board.tscn" type="PackedScene" id=2]
[ext_resource path="res://Game/Game.gd" type="Script" id=3]
[ext_resource path="res://Game/GL_SFX_Nope.wav" type="AudioStream" id=4]
[ext_resource path="res://Tile/GL_SFX_Tile-Place.wav" type="AudioStream" id=5]
[ext_resource path="res://GUI/GUI.tscn" type="PackedScene" id=6]
[ext_resource path="res://Game/GL_Sting_Right_Player_Turn.wav" type="AudioStream" id=7]
[ext_resource path="res://Game/GL_SFX_Pickup.wav" type="AudioStream" id=8]
[ext_resource path="res://Tile/TileTypes/Vole/Vole.tres" type="Resource" id=9]
[ext_resource path="res://Game/SpaceIndicator/SpaceIndicator.tscn" type="PackedScene" id=10]
[ext_resource path="res://Tile/TileTypes/Worms/Worms.tres" type="Resource" id=11]
[ext_resource path="res://Tile/TileTypes/Skink/Skink.tres" type="Resource" id=12]
[ext_resource path="res://Tile/TileTypes/Hawk/Hawk.tres" type="Resource" id=13]
[ext_resource path="res://Tile/TileTypes/Deer/Deer.tres" type="Resource" id=14]
[ext_resource path="res://Tile/TileTypes/Coyote/Coyote.tres" type="Resource" id=15]
[ext_resource path="res://Tile/TileTypes/Beehive/Beehive.tres" type="Resource" id=16]
[ext_resource path="res://Tile/TileTypes/Bullfrog/Bullfrog.tres" type="Resource" id=17]
[ext_resource path="res://Soundtrack/AudioManager.tscn" type="PackedScene" id=18]
[ext_resource path="res://Settings/Settings.tscn" type="PackedScene" id=19]

[node name="Game" type="Node2D"]
script = ExtResource( 3 )
_initial_stack_tile_types = [ ExtResource( 11 ), ExtResource( 11 ), ExtResource( 11 ), ExtResource( 14 ), ExtResource( 14 ), ExtResource( 14 ), ExtResource( 9 ), ExtResource( 9 ), ExtResource( 9 ), ExtResource( 16 ), ExtResource( 16 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 17 ), ExtResource( 12 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 13 ), ExtResource( 15 ) ]

[node name="GUI" parent="." instance=ExtResource( 6 )]
anchor_right = 0.0
anchor_bottom = 0.0

[node name="Board" parent="." instance=ExtResource( 2 )]
position = Vector2( 960, 400 )

[node name="Tiles" type="Node2D" parent="."]

[node name="LeftPlayerTurnSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )

[node name="RightPlayerTurnSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = 12.0

[node name="PickUpSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[node name="NoDropSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = 2.0

[node name="DropSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = 3.0

[node name="LeftSupply" type="Node2D" parent="."]

[node name="LeftPlayerPosition1" type="Position2D" parent="LeftSupply"]
position = Vector2( 117, 930 )

[node name="LeftPlayerPosition2" type="Position2D" parent="LeftSupply"]
position = Vector2( 354, 930 )

[node name="LeftPlayerPosition3" type="Position2D" parent="LeftSupply"]
position = Vector2( 591, 930 )

[node name="RightSupply" type="Node2D" parent="."]

[node name="RightPlayerPosition1" type="Position2D" parent="RightSupply"]
position = Vector2( 1322, 930 )

[node name="RightPlayerPosition2" type="Position2D" parent="RightSupply"]
position = Vector2( 1559, 930 )

[node name="RightPlayerPosition3" type="Position2D" parent="RightSupply"]
position = Vector2( 1796, 930 )

[node name="LeftStackPosition" type="Position2D" parent="."]
position = Vector2( 828, 926 )

[node name="RightStackPosition" type="Position2D" parent="."]
position = Vector2( 1085, 930 )

[node name="SpaceIndicator" parent="." instance=ExtResource( 10 )]
visible = false

[node name="AudioManager" parent="." instance=ExtResource( 18 )]

[node name="Settings" parent="." instance=ExtResource( 19 )]
